fix: footer links alignments

--- a/src/index.css
+++ b/src/index.css
@@ -332,7 +332,7 @@ section {
     @apply my-10 md:mt-20 mt-20 text-white-50 px-5 md:px-20 xl:px-20 flex items-center justify-center;
 
     .footer-container {
-      @apply grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8 md:gap-0 w-full;
+      @apply grid grid-cols-1 xl:grid-cols-3 gap-8  w-full;
     }
 
     p {
